tests/snapshots/run_wpt_conformance__coreml_gather_float32_3D_tensor_and_2D_indices_options_axis_2.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gather.https.any.js",
    "gather float32 3D tensor and 2D indices options.axis=2",
    "coreml",
    "PASS",
)
