tests/snapshots/run_wpt_conformance__coreml_gather_float32_5D_tensor_and_1D_indices_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gather.https.any.js",
    "gather float32 5D tensor and 1D indices default options",
    "coreml",
    "PASS",
)
